# keyboard-layout-optimizer

./: Cargo.toml
src/: digram_timing.rs  gui.rs  keyboard.rs  layout_creator.rs  main.rs
src/windows/: input.rs  trace.rs
