[package]
name = "keyboard-layout-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
windows = { version = "0.56.0", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging"] }
